--- a/src/components/top-styling.scss
+++ b/src/components/top-styling.scss
@@ -27,3 +27,17 @@ margin-left: -4px ;
 
   width: 100px;
 }
+
+.container {
+
+  h1 {
+    margin-bottom: 100px;
+  }
+
+  img {
+
+
+    filter: sepia(100%) saturate(300%) brightness(70%) hue-rotate(295deg);
+  }
+}
+
